# biblib

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
scripts/: print_enum_variants.py  print_from_tag.py  print_to_tag.py  tags.txt
src/: csv.rs  dedupe.rs  endnote_xml.rs  error.rs  lib.rs  pubmed.rs  regex.rs  ris.rs  utils.rs
src/csv/: config.rs  mod.rs  parse.rs  structure.rs
src/endnote_xml/: mod.rs  parse.rs
src/pubmed/: author.rs  parse.rs  split.rs  structure.rs  tags.rs  whole_lines.rs
src/ris/: mod.rs  parse.rs  structure.rs  tags.rs
