[package]
name = "biblib"
version = "0.1.1"
edition = "2021"
description = "Parse, manage, and deduplicate academic citations"
authors = ["Ali Azlan <aliazlanofficial@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/aliazlanpro/biblib"
documentation = "https://docs.rs/biblib"
readme = "README.md"
keywords = ["citations", "deduplication", "academic", "doi", "bibliography"]
categories = ["science", "text-processing"]

[dependencies]
thiserror = "2.0.11"
nanoid = "0.4.0"
once_cell = "1.20.2"
regex = "1.11.1"
quick-xml = "0.37.2"
csv = "1.3.1"
strsim = "0.11.1"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }