[package]
name = "biblib"
version = "0.2.0"
edition = "2021"
description = "Parse, manage, and deduplicate academic citations"
authors = ["Ali Azlan <aliazlanofficial@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/aliazlanpro/biblib"
documentation = "https://docs.rs/biblib"
readme = "README.md"
keywords = ["citations", "deduplication", "academic", "doi", "bibliography"]
categories = ["science", "text-processing"]

[features]
default = ["csv", "pubmed", "xml", "ris", "dedupe"]
csv = ["dep:csv"]
pubmed = []
xml = ["dep:quick-xml"]
ris = []
dedupe = ["dep:rayon", "dep:strsim"]

[dependencies]
thiserror = "2.0.11"
nanoid = "0.4.0"
once_cell = "1.20.2"
regex = "1.11.1"
quick-xml = { version = "0.37.2", optional = true }
csv = { version = "1.3.1", optional = true }
strsim = { version = "0.11.1", optional = true }
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0", features = ["derive"] }