[package]
name = "biblib"
version = "0.2.4"
edition = "2024"
description = "Parse, manage, and deduplicate academic citations"
authors = ["Ali Azlan <aliazlanofficial@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AliAzlanDev/biblib"
documentation = "https://docs.rs/biblib"
readme = "README.md"
keywords = ["citations", "deduplication", "nbib", "doi", "bibliography"]
categories = ["science", "text-processing"]

[features]
default = ["csv", "pubmed", "xml", "ris", "dedupe", "regex"]
csv = ["dep:csv"]
pubmed = []
xml = ["dep:quick-xml"]
ris = []
dedupe = ["dep:rayon", "dep:strsim"]
regex = ["dep:regex"]
lite = ["dep:regex-lite"]

[dependencies]
thiserror = "2.0.11"
nanoid = "0.4.0"
quick-xml = { version = "0.37.2", optional = true }
csv = { version = "1.3.1", optional = true }
strsim = { version = "0.11.1", optional = true }
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
regex = { version = "1.11.1", optional = true }
regex-lite = { version = "0.1.6", optional = true }
